# stm32f303re-hal-template

./: Cargo.toml  README.md  memory.x  openocd.gdb
examples/: adc.rs  i2c_runlight.rs  i2c_scan.rs  pwm.rs  spi_display.rs  spi_display_2.rs  uart.rs  uart_dma.rs  uart_echo.rs  uart_read.rs  uart_write.rs
examples/SPI_ESP32_Slave/: main.py  wifi_credentials.py
examples/project-embedded-hal/: i2c_led_bar.rs  main.rs  spi_oled_display.rs
src/: i2c_led_bar.rs  main copy.rs  main.rs  potentiometer.rs  pwm_led.rs  spi_oled_display.rs
